<resources>
    <string name="app_name">BCU</string>
    <string name="anim_view">Animation Viewer</string>
    <string name="stg_inf">Stage Info</string>
    <string name="def_animsch">Open Filter screens</string>
    <string name="def_animbck">Back to main page</string>
    <string name="def_stgbck">Back to main page</string>
    <string name="sch_nm">Search by Filter</string>
    <string name="def_schbck">Back to Animation Viewer</string>
    <string name="sch_tg">Target</string>
    <string name="sch_red">Red</string>
    <string name="sch_fl">Float</string>
    <string name="sch_bla">Black</string>
    <string name="sch_me">Metal</string>
    <string name="sch_al">Alien</string>
    <string name="sch_zo">Zombie</string>
    <string name="sch_re">Relic</string>
    <string name="sch_an">Angel</string>
    <string name="sch_wh">White</string>
    <string name="sch_or">Or</string>
    <string name="sch_and">And</string>
    <string name="sch_atk">Attack</string>
    <string name="sch_rare">Rarity</string>
    <string name="sch_rare_ba">Basic</string>
    <string name="sch_rare_ra">Rare</string>
    <string name="sch_rare_ex">EX</string>
    <string name="sch_rare_sr">Super Rare</string>
    <string name="sch_rare_ur">Uber Rare</string>
    <string name="sch_rare_lr">Legend Rare</string>
    <string name="sch_atk_si">Single</string>
    <string name="sch_atk_ra">Area</string>
    <string name="sch_atk_ld">LD</string>
    <string name="sch_atk_om">Omni</string>
    <string name="sch_atk_mu">Multi HIt</string>
    <string name="sch_abil">Ability</string>
    <string name="sch_abi_we">Weaken</string>
    <string name="sch_abi_fr">Freeze</string>
    <string name="sch_abi_sl">Slow</string>
    <string name="sch_abi_ao">Attacks Only</string>
    <string name="sch_abi_st">Strong</string>
    <string name="sch_abi_re">Resistant</string>
    <string name="sch_abi_it">Insanely Tough</string>
    <string name="sch_abi_id">Insane Damage</string>
    <string name="sch_abi_kb">Knockback</string>
    <string name="sch_abi_wa">Warp</string>
    <string name="sch_abi_str">Strengthen</string>
    <string name="sch_abi_su">Survive</string>
    <string name="sch_abi_bd">Base Destroyer</string>
    <string name="sch_abi_cr">Critical</string>
    <string name="sch_abi_zk">Zombie Killer</string>
    <string name="sch_abi_bb">Barrier Breaker</string>
    <string name="sch_abi_em">Extra Money</string>
    <string name="sch_abi_me">Metal</string>
    <string name="sch_abi_iw">Imu.Weaken</string>
    <string name="sch_abi_if">Imu.Freeze</string>
    <string name="sch_abi_is">Imu.Slow</string>
    <string name="sch_abi_ik">Imu.KB</string>
    <string name="sch_abi_iwv">Imu.Wave</string>
    <string name="sch_abi_iwa">Imu.Warp</string>
    <string name="sch_abi_ic">Imu.Curse</string>
    <string name="sch_abi_ws">Wave Shield</string>
    <string name="sch_abi_md">Massive Damage</string>
    <string name="sch_abi_wv">Wave</string>
    <string name="sch_abi_eva">Eva Angel Killer</string>
    <string name="sch_abi_wk">Witch Killer</string>
    <string name="main_file_x">Update Found</string>
    <string name="main_file_cont">You must download additional files to run this application. Will you download files?</string>
    <string name="main_file_ok">OK</string>
    <string name="main_file_cancel">Cancel</string>
    <string name="down_wait">Waiting for connection…</string>
    <string name="down_state_ok">Download Complete!</string>
    <string name="down_state_no">Download Failed…</string>
    <string name="down_state_doing">"Downloading Files… : %1$s"</string>
    <string name="down_state_rea">Ready</string>
    <string name="down_redown">Retry</string>
    <string name="down_zip_ex">"Extracting… : "</string>
    <string name="down_state_install">Installed</string>
    <string name="main_unitinfo">Unit Info</string>
    <string name="main_check_up">Checking Updates…</string>
    <string name="main_check_file">Checking files…</string>
    <string name="main_info_corr">Info file corrupted</string>
    <string name="main_info_cont">Info File is corrupted. Will you re-download files?</string>
    <string name="main_file_need">Download Required</string>
    <string name="main_file_up">You must download new files. Will you download files?</string>
    <string name="down_check_file">Checking files…</string>
    <string name="main_internet_no">No internet connection!</string>
    <string name="down_zip_rea">Preparing Extracting…</string>
    <string name="main_down_init">Initial Download Required</string>
    <string name="main_file_read">Reading Files…</string>
    <string name="def_schreset_cont">Reset Search Setting</string>
    <string name="def_unit_icon">Unit icon</string>
    <string name="unit_info_id">ID</string>
    <string name="unit_info_trait">Trait</string>
    <string name="unit_info_level">Level</string>
    <string name="unit_info_hp">HP</string>
    <string name="hb">HB</string>
    <string name="unit_info_plus"> + </string>
    <string name="unit_info_atk">Attack</string>
    <string name="unit_info_starred">Starred</string>
    <string name="unit_info_god1">Mystery Mask 1</string>
    <string name="unit_info_god2">Mystery Mask 2</string>
    <string name="unit_info_god3">Mystery Mask 3</string>
    <string name="unit_info_t_none">None</string>
    <string name="unit_info_cost">Cost</string>
    <string name="unit_info_t_allc">All Color</string>
    <string name="unit_info_t_allt">All Trait</string>
    <string name="unit_info_spd">Speed</string>
    <string name="unit_info_dps">DPS</string>
    <string name="unit_info_cd">CD</string>
    <string name="unit_info_fr">Frames</string>
    <string name="unit_info_sec">Seconds</string>
    <string name="unit_info_rang">Range</string>
    <string name="unit_info_atkt">Attack Type</string>
    <string name="def_info_back_cont">Unit info Back Button</string>
    <string name="unit_info_abil">Ability</string>
    <string name="unit_info_tba">TBA</string>
    <string name="sch_np">Consider Talents</string>
    <string name="unit_info_pre">Pre-Atk</string>
    <string name="unit_info_post">Post-Atk</string>
    <string name="unit_info_atktime">Atk-Time</string>
    <string name="unit_info_abilT">Use Ability</string>
    <string name="unit_info_true">True</string>
    <string name="unit_info_false">False</string>
    <string name="abi_rev">Revive</string>
    <string name="abi_stt">Stop Time</string>
    <string name="abi_snk">Sniper KB</string>
    <string name="abi_seal">Seal</string>
    <string name="abi_sum">Summon</string>
    <string name="abi_mvatk">Moving Attack</string>
    <string name="abi_thch">Theme Change</string>
    <string name="abi_poi">Venom</string>
    <string name="abi_boswv">Boss Wave</string>
    <string name="abi_imvatk">Imu.Moving Attack</string>
    <string name="abi_isnk">Imu.Sniper KB</string>
    <string name="abi_istt">Imu.Stop Time</string>
    <string name="abi_gh">Ghost</string>
    <string name="abi_sui">Suicide</string>
    <string name="abi_ithch">Imu.Theme Change</string>
    <string name="abi_iseal">Imu.Seal</string>
    <string name="abi_iboswv">Imu.Boss Wave</string>
    <string name="abi_ipoi">Imu.Venom</string>
    <string name="unit_info_strong">" (Takes damage x0.5~x0.4 / Gives damage x1.5~x1.8)"</string>
    <string name="unit_info_masdam">" (Gives damage x3~x4)"</string>
    <string name="unit_info_resis">" (Takes damage x0.25~x0.2)"</string>
    <string name="unit_info_insres">" (Takes damage x1/6~x1/7)"</string>
    <string name="unit_info_insmas">" (Gives damage x5~x6)"</string>
    <string name="def_unit_s_icon">Unit\'s Icon</string>
    <string name="unit_info_exmon">" (Money get x2)"</string>
    <string name="unit_info_atkbs">" (Give damage x4 to Base)"</string>
    <string name="unit_info_wkill">" (Takes damage x0.1 / Gives damage x5)"</string>
    <string name="unit_info_evakill">" (Takes damage x0.2 / Gives damage x5)"</string>
    <string name="unit_info_text0">"_% chance to "</string>
    <string name="unit_info_text1">" for _f"</string>
    <string name="unit_info_text2">"create Lv._ "</string>
    <string name="unit_info_text3">" enemy to _%"</string>
    <string name="unit_info_text4">" to distance of _"</string>
    <string name="unit_info_text5">"At _% health, "</string>
    <string name="unit_info_text6">" to _%"</string>
    <string name="unit_info_text7">" _"</string>
    <string name="def_unit_info_text8">times</string>
    <string name="unit_info_text9">" after _f"</string>
    <string name="unit_info_text10">" with _% health"</string>
    <string name="def_unit_info_text11">"Immune to "</string>
    <string name="unit_info_first">First</string>
    <string name="unit_info_second">Second</string>
    <string name="unit_info_third">Third</string>
    <string name="unit_info_extitle">Unit Explanation</string>
    <string name="apk_down_title">New Apk Found</string>
    <string name="config_frames">Frames</string>
    <string name="enemy_info_multi">HP / Atk</string>
    <string name="stg_enem_list_num">Number</string>
    <string name="stg_info_enlist">Enemy List</string>
    <string name="stg_info_expand">Expand</string>
    <string name="stg_info_icon">Icon</string>
    <string name="stg_info_info">Info</string>
    <string name="export_png">Export png</string>
    <string name="anim_reset_size">Reset Position / Size</string>
    <string name="anim_option_gifstart">Start recording gif</string>
    <string name="lineup_cre_set">Create Set</string>
    <string name="def_set_name">Set name</string>
    <string name="lineup_create">Create</string>
    <string name="lineup_paste">Paste</string>
    <string name="lineup_copy_lu">Copy Lineup</string>
    <string name="lineup_copy_set">Copy Set</string>
    <string name="lineup_copy">Copy</string>
    <string name="lineup_create_lu">Create Lineup</string>
    <string name="lineup_create_set">Create Set</string>
    <string name="lineup_paste_set">Paste Set</string>
    <string name="lineup_paste_lu">Paste Lineup</string>
    <string name="lineup_rename">Rename</string>
    <string name="lineup_rename_set">Rename Set</string>
    <string name="lineup_rename_lu">Rename Lineup</string>
    <string name="lineup_clone_set">Clone Set</string>
    <string name="lineup_clone">Clone</string>
    <string name="lineup_clone_lu">Clone Lineup</string>
    <string name="lineup_remove">Remove</string>
    <string name="lineup_remove_Set">Remove Set</string>
    <string name="lineup_remove_lu">Remove Lineup</string>
    <string name="battle_not_over">Battle isn\'t over yet</string>
    <string name="battle_sure_go">Are you sure you want to exit battle?</string>
    <string name="battle_do_not_show">Do not show this warn again</string>
    <string name="battle_exit">Exit</string>
    <string name="main_err_detect">App crash detected</string>
    <string name="main_err_ask">Error log files are generated. Do you want to upload these error log files to server?</string>
    <string name="main_err_yes">Upload</string>
    <string name="main_err_no">No</string>
    <string name="main_err_notshow">Do not show this dialog again</string>
    <string name="main_err_always">Always send error logs to server</string>
    <string name="dev_pass_req">Password Required</string>
    <string name="dev_pass_active">Enter password to activate developer mode</string>
    <string name="dev_password">Password</string>
    <string name="dev_activate">Activate</string>
    <string name="main_confirm">Confirm</string>
    <string name="pack_invalid">Invalid Pack Name</string>
    <string name="pack_invalid_content">Pack _ is not allowed because it can affect app</string>
    <string name="pack_invalid_remove">Remove this pack file</string>
    <string name="datareset_warning">Are you sure that you want to delete selected data? This cannot be undone</string>
    <string name="datareset_reset">Reset</string>
</resources>