<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/anim_option_reset"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:title="@string/anim_reset_size"
        app:showAsAction="never"/>

    <item
        android:id="@+id/anim_option_png"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:title="@string/export_png"
        app:showAsAction="never" />

    <item
        android:id="@+id/anim_option_pngtr"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:title="@string/export_png_tr"
        app:showAsAction="never" />

    <item
        android:id="@+id/anim_option_gif"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:title="@string/anim_option_gifstart"
        app:showAsAction="never" />

</menu>