<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/backgroundPrimary">

    <TextView
        android:id="@+id/checkdialogname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/pack_invalid"
        android:textColor="?attr/TextPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/checkdialogcont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/pack_invalid_content"
        android:textColor="?attr/TextPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/checkdialogname"
        app:layout_constraintTop_toBottomOf="@+id/checkdialogname" />

    <CheckBox
        android:id="@+id/checkdialogcheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pack_invalid_remove"
        android:textColor="?attr/TextPrimary"
        app:layout_constraintStart_toStartOf="@+id/checkdialogcont"
        app:layout_constraintTop_toBottomOf="@+id/checkdialogcont" />

    <Button
        android:id="@+id/checkdialogconf"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="?attr/backgroundPrimary"
        android:text="@string/main_confirm"
        android:textAllCaps="false"
        android:textColor="?attr/TextPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/checkdialogcont"
        app:layout_constraintTop_toBottomOf="@+id/checkdialogcheck" />
</androidx.constraintlayout.widget.ConstraintLayout>