<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/backgroundPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/devpasstitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/dev_pass_req"
        android:textColor="?attr/TextPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/devpasscont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/devpasstitle"
        android:layout_alignStart="@+id/devpasstitle"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/dev_pass_active"
        android:textColor="?attr/TextPrimary" />

    <EditText
        android:id="@+id/devpassedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/devpasscont"
        android:layout_alignStart="@+id/devpasscont"
        android:layout_alignEnd="@+id/devpasscont"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="0dp"
        android:backgroundTint="?attr/TextPrimary"
        android:ems="10"
        android:hint="@string/dev_password"
        android:inputType="textPersonName"
        android:textColor="?attr/TextPrimary"
        android:textColorHint="?attr/HintPrimary"
        android:autofillHints="" />

    <Button
        android:id="@+id/devpassactive"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/devpassedit"
        android:layout_alignEnd="@+id/devpassedit"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="16dp"
        android:text="@string/dev_activate"
        android:textAllCaps="false"
        android:textColor="?attr/TextPrimary"
        android:textSize="14sp"
        android:textStyle="bold" />
</RelativeLayout>