<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundPrimary">

    <TextView
        android:id="@+id/stginfoenemtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/stg_info_enlist"
        android:textColor="?attr/TextPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/stginfoenfrse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="?attr/ButtonPrimary"
        android:text="@string/config_frames"
        android:textAllCaps="false"
        android:textColor="?attr/TextPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/stginfoenemtitle"
        app:layout_constraintStart_toEndOf="@+id/stginfoenemtitle"
        app:layout_constraintTop_toTopOf="@+id/stginfoenemtitle" />

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stginfoenfrse">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.175"
            android:background="@drawable/cell_shape"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/stg_info_expand"
            android:textColor="?attr/TextPrimary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="@drawable/cell_shape"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/stg_info_icon"
            android:textColor="?attr/TextPrimary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@drawable/cell_shape"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/enemy_info_multi"
            android:textColor="?attr/TextPrimary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@drawable/cell_shape"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/stg_enem_list_num"
            android:textColor="?attr/TextPrimary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.125"
            android:background="@drawable/cell_shape"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/stg_info_info"
            android:textColor="?attr/TextPrimary"
            android:textStyle="bold" />

    </TableRow>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/stginfoenemscroll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/stginfoenemlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>