<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/backgroundPrimary">

    <TextView
        android:id="@+id/resetdialogtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/datareset_warning"
        android:textColor="?attr/TextPrimary" />

    <Button
        android:id="@+id/resetdialogreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resetdialogtext"
        android:layout_alignEnd="@+id/resetdialogtext"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="?attr/ErrorPrimary"
        android:text="@string/datareset_reset"
        android:textAllCaps="false"
        android:textColor="?attr/TextPrimary" />

    <Button
        android:id="@+id/resetdialogcancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/resetdialogreset"
        android:layout_alignBottom="@+id/resetdialogreset"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="0dp"
        android:layout_toStartOf="@+id/resetdialogreset"
        android:text="@string/main_file_cancel"
        android:textAllCaps="false"
        android:textColor="?attr/TextPrimary" />
</RelativeLayout>